# SnapStudySensei

./: .gitignore  README.md  pyproject.toml
snapstudysensei/: __init__.py  anki.py  dic.py  main.py  main.qml  ocr.py  snapshot_provider.py  tts.py  window_capture.py
snapstudysensei/data/: back.html  front.html  style.css
snapstudysensei/windows_list/: __init__.py  windows_list_osx.py  windows_list_win32.py  windows_list_x11.py
